# libtumpa

./: Cargo.toml  README.md
.cargo/: audit.toml
.github/workflows/: ci.yml  publish.yml
docs/adr/: 0001-ecc-card-import-prefix-fix-belongs-in-wecanencrypt.md
examples/: README.md  emit_cv25519_key.rs  nitrokey_guard_check.rs  nitrokey_probe.rs  upload_v4_x25519_cs.rs
src/: cache.rs  decrypt.rs  describe.rs  encrypt.rs  error.rs  key.rs  lib.rs  network.rs  paths.rs  revocation.rs  sign.rs  store.rs  verify.rs
src/card/: admin.rs  expiry.rs  link.rs  mobile.rs  mod.rs  upload.rs
tests/: card_integration.rs  integration.rs
tests/files/: v4_x25519_cs_primary_public.asc
