[package]
name = "libtumpa"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Shared tumpa library: high-level OpenPGP key, card, and keystore operations on top of wecanencrypt."
repository = "https://github.com/tumpaproject/libtumpa"
readme = "README.md"
keywords = ["openpgp", "tumpa", "keystore", "smartcard", "gpg"]
categories = ["cryptography", "authentication"]

[features]
default = ["card"]
card = ["wecanencrypt/card"]
network = ["wecanencrypt/network", "dep:reqwest", "dep:serde_json"]

[dependencies]
wecanencrypt = { version = "0.10.0", features = ["keystore"] }
# Pinned to the same pgp version used by wecanencrypt so that
# DetachedSignature parsing agrees between both crates.
pgp = "0.19"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
thiserror = "2"
anyhow = "1"
zeroize = { version = "1", features = ["derive"] }
log = "0.4"
dirs = "6"
serde = { version = "1", features = ["derive"] }

# Network feature deps
reqwest = { version = "0.12", features = ["json"], optional = true }
serde_json = { version = "1", optional = true }

[dev-dependencies]
tempfile = "3"
