[package]
name = "libtumpa"
version = "0.3.2"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Shared tumpa library: high-level OpenPGP key, card, and keystore operations on top of wecanencrypt."
repository = "https://github.com/tumpaproject/libtumpa"
readme = "README.md"
keywords = ["openpgp", "tumpa", "keystore", "smartcard", "gpg"]
categories = ["cryptography", "authentication"]
include = [
    "/Cargo.toml",
    "/LICENSE",
    "/README.md",
    "/src/**",
    "/tests/**",
]

[features]
default = ["card"]
# Desktop card support via PC/SC (libpcsclite / PCSC.framework / WinSCard).
card = ["wecanencrypt/card-pcsc"]
# Mobile card support. Delegates APDU I/O to a
# `wecanencrypt::card::external` provider registered at app startup —
# see `libtumpa::card::mobile::MobileCardBackend`.
card-mobile = ["wecanencrypt/card-external", "dep:card-backend"]
network = ["wecanencrypt/network", "dep:reqwest", "dep:serde_json"]

[dependencies]
wecanencrypt = { version = "0.15.0", default-features = false, features = ["keystore"] }
# Pulled in by card-mobile so MobileCardBackend can implement the
# CardBackend / CardTransaction traits directly.
card-backend = { version = "0.2", optional = true }
# Pinned to the same pgp version used by wecanencrypt so that
# DetachedSignature parsing agrees between both crates.
pgp = "0.19"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
thiserror = "2"
anyhow = "1"
zeroize = { version = "1", features = ["derive"] }
log = "0.4"
dirs = "6"
serde = { version = "1", features = ["derive"] }

# Network feature deps
reqwest = { version = "0.13", features = ["json"], optional = true }
serde_json = { version = "1", optional = true }

[dev-dependencies]
tempfile = "3"
env_logger = "0.11"
